<resources>
    <string name="app_name">O2OA</string>
    <string name="app_about">关于O2OA</string>
    <string name="app_name_about">O2OA</string>
    <string name="activity_safe_warning">已切换至后台运行！</string>
    <string name="copy_right">&#169;</string>
    <string name="reserved">All right reserved.</string>
    <string name="version">版本：</string>
    <string name="check_update">检测更新</string>
    <string name="update">更新</string>
    <string name="network_error_message">网络连接异常，请检查您的网络连接是否正确！</string>
    <string name="launch_introduction_enter_button_label">立即体验</string>
    <string name="bind_phone_validate_number">验证手机</string>
    <string name="bind_phone_choose_company">选择单位</string>
    <string name="app_error">应用异常</string>
    <string name="launch_start">准备中&#8230;</string>
    <string name="launch_network_is_not_connected">网络未连接，请检查网络连接情况！</string>
    <string name="launch_check_bind">正在连接O2云&#8230;</string>
    <string name="launch_load_center">正在连接服务器&#8230;</string>
    <string name="launch_check_style">正在检查配置&#8230;</string>
    <string name="launch_download_style">正在下载配置&#8230;</string>
    <string name="launch_auto_login">登录中&#8230;</string>
    <string name="launch_auto_login_im">IM连接中&#8230;</string>
    <string name="rvs_pull_load">数据加载中&#8230;</string>
    <string name="menu_choose">选择</string>
    <string name="left_btn_label">左边</string>
    <string name="right_btn_label">右边</string>
    <string name="top_title_label">标题</string>
    <string name="exit_click_double_back_btn">再次点击返回键退出应用</string>
    <string name="data_loading_label">数据加载中&#8230;</string>
    <string name="data_load_failure_label">非常抱歉，数据加载失败</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_overtime">登陆信息已过期</string>
    <string name="back_label">返回</string>
    <string name="transition_person_img">transition_person_img</string>
    <string name="recycler_no_data">没有查询到数据！</string>
    <string name="recycler_no_data_cool">这里好冷清，啥都没有！</string>
    <string name="recycler_no_data_wonderful_work">太棒了，您的工作都完成了！</string>
    <string name="btn_next">下一步</string>
    <string name="scan_login_confirm_title">扫码登录</string>
    <string name="scan_login_title">扫描二维码结果</string>
    <string name="scan_login_confirm">确认登录</string>
    <string name="scan_login_desc">即将在电脑上登录O2网页版</string>
    <string name="scan_login_cancel">取消登录</string>
    <string name="share">分享</string>
    <string name="share_copy_link">已复制链接到剪切板</string>
    <string name="share_wx">微信</string>
    <string name="share_friends">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_douban">豆瓣</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_copy">复制</string>
    <string name="share_more">更多</string>
    <string name="share_uninstall_app">请先安装</string>
    <string name="share_to">分享到&#8230;</string>
    <string name="menu_main_my_edit">编   辑</string>
    <string name="demo_alert_top">您当前绑定连接的是O2OA的官方演示系统。如果您需要连接自己的服务器按如下操作：</string>
    <string name="demo_alert_no1">1. 到我们的官网 www.o2oa.io 产品下载区下载O2server到本地，安装启动等相关操作说明可以在下载区找到。</string>
    <string name="demo_alert_no2">2. 启动O2server后在浏览器访问，并使用xadmin账户登录，在系统设置>移动办公配置 模块中连接到O2云中。</string>
    <string name="demo_alert_no3">3. 在组织管理中添加您的用户信息，需填写正确的手机号码。</string>
    <string name="demo_alert_no4">4. 在手机端，进入 设置>帐号与安全>重新绑定手机号码 ，就可以重新绑定您的应用到自己的服务器上了。</string>
    <string name="tab_todo_task">待办</string>
    <string name="tab_todo_read">待阅</string>
    <string name="tab_todo_task_complete">已办</string>
    <string name="tab_todo_read_complete">已阅</string>
    <string name="tab_todo_more">全部</string>
    <string name="tab_todo_new_task_center">办公中心</string>
    <string name="tab_todo_new_message_center">信息中心</string>
    <string name="tab_todo_news_label">最新 公告 :</string>
    <string name="tab_todo_publish">新   建</string>
    <string name="tab_yunpan_my_file">我的文件</string>
    <string name="tab_yunpan_share_file">共享文件</string>
    <string name="tab_yunpan_recive_file">收到文件</string>
    <string name="tab_meeting">会议</string>
    <string name="tab_meeting_invited">邀请</string>
    <string name="tab_meeting_room">会议室</string>
    <string name="tab_todo">首页</string>
    <string name="tab_message">消息</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_my">我的</string>
    <string name="tab_settings">设置</string>
    <string name="tab_app">应用</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_reply">&#xf112;</string>
    <string name="pr_pull_to_refresh">下拉可以刷新</string>
    <string name="pr_release_to_refresh">释放立即刷新</string>
    <string name="pr_refreshing">正在刷新…</string>
    <string name="pr_not_updated_yet">暂未更新过</string>
    <string name="pr_updated_at">上次更新于%1$s前</string>
    <string name="pr_updated_just_now">刚刚更新</string>
    <string name="pr_time_error">时间有问题</string>
    <string name="activity_login_username">用户名或手机号码</string>
    <string name="login_phone">输入手机号码</string>
    <string name="login_code">验证码</string>
    <string name="login_captcha">图片验证码</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_submit">登    录</string>
    <string name="activity_login_other">其他登录方式</string>
    <string name="activity_login_fingerprint_click">点击开始认证</string>
    <string name="activity_login_face">人脸识别</string>
    <string name="activity_logout">退出登录</string>
    <string name="login_button_next">下一步</string>
    <string name="login_button_bind">绑    定</string>
    <string name="login_button_code">发送验证码</string>
    <string name="login_button_code_disabled">重新发送</string>
    <string name="login_button_rebind">重新绑定</string>
    <string name="login_button_user_fallback">其他方式登录</string>
    <string name="activity_login_save">保存</string>
    <string name="activity_login_remember_login">记住我</string>
    <string-array name="login_facepp_trackig_mode_array">
        <item>Fast</item>
        <item>Robust</item>
        <item>Tracking_Rect</item>
    </string-array>
    <string name="title_activity_contact_search">搜索</string>
    <string name="contact_icon_label">图标</string>
    <string name="contact_list_name_text">组织名称</string>
    <string name="contact_list_group">群组名称</string>
    <string name="contact_list_name">姓名</string>
    <string name="contact_list_depart">部门</string>
    <string name="contact_list_no_mobile">还未填写手机号码</string>
    <string name="contact_type_dept_title">部门人员</string>
    <string name="contact_type_company_title">公司详细</string>
    <string name="contact_right_arrow_string">进入</string>
    <string name="contact_load_failure_label">非常抱歉，数据加载失败</string>
    <string name="title_activity_contact">组织结构</string>
    <string name="contact_btn_search_label">查询</string>
    <string name="activity_contact_search_hint">姓名、拼音</string>
    <string name="contact_fragment_search_hint">请输入姓名、拼音</string>
    <string name="search_contact">搜索联系人</string>
    <string name="title_activity_person_info">个人信息</string>
    <string name="person_info">个人信息</string>
    <string name="person_mobile_label">手机</string>
    <string name="person_email_label">邮箱</string>
    <string name="person_gender_label">性别</string>
    <string name="person_qq_label">QQ</string>
    <string name="person_weixin_label">微信</string>
    <string name="company_info">企业信息</string>
    <string name="company_employee_label">员工号</string>
    <string name="company_name_label">姓名</string>
    <string name="company_unique_label">唯一编码</string>
    <string name="company_dept_label">部门</string>
    <string name="person_info_sms_talk">发起聊天</string>
    <string name="person_collect">收藏</string>
    <string name="person_collect_cancel">取消收藏</string>
    <string name="warn_phone_permission">应用没有被授予拨打电话的权限，请到手机应用管理里面开启此权限！</string>
    <string name="title_activity_yunpan">云盘</string>
    <string name="yunpan_menu_upload_file">上传文件</string>
    <string name="yunpan_menu_create_folder">新建文件夹</string>
    <string name="yunpan_menu_order_by_createTime">按修改时间排序</string>
    <string name="yunpan_menu_choose">选择</string>
    <string name="yunpan_menu_choose_cancel">取消选择</string>
    <string name="yunpan_rename">重命名</string>
    <string name="yunpan_delete">删除</string>
    <string name="yunpan_share">分享</string>
    <string name="yunpan_send">发送</string>
    <string name="yunpan_move">移动</string>
    <string name="yunpan_menu_list">列表展现</string>
    <string name="yunpan_menu_pick_top">选择顶层</string>
    <string name="yunpan_menu_grid">网格展现</string>
    <string name="title_activity_picture_viewer">图片查看器</string>
    <string name="yunpan_category_image">图片</string>
    <string name="yunpan_category_doc">文档</string>
    <string name="yunpan_category_music">音乐</string>
    <string name="yunpan_category_video">视频</string>
    <string name="yunpan_category_other">其它</string>
    <string name="yunpan_category_share">分享</string>
    <string name="yunpan_all_file">全部文件</string>
    <string name="share_file_menu_test">测试</string>
    <string name="title_activity_chat">实时消息</string>
    <string name="activity_chat_send_btn_label">发送</string>
    <string name="chat_please_enter">请输入...</string>
    <string name="menu_single_create">发起单聊</string>
    <string name="menu_tribe_create">发起群聊</string>
    <string name="activity_im_person_config_label">聊天设置</string>
    <string name="activity_im_tribe_create_label">创建群聊</string>
    <string name="activity_im_tribe_update_label">群信息</string>
    <string name="activity_im_tribe_name">群名称</string>
    <string name="activity_im_tribe_name_hint">取个群名称方便后续查询</string>
    <string name="activity_im_tribe_member">群成员</string>
    <string name="activity_im_tribe_member_explain">(需要添加的成员必须使用过O2移动端应用的用户)</string>
    <string name="activity_im_tribe_notice_label">群公告</string>
    <string name="activity_im_tribe_notice_hint">可以在此输入公告内容</string>
    <string name="activity_im_tribe_save">保      存</string>
    <string name="activity_im_tribe_delete">删除并退出</string>
    <string name="activity_im_tribe_update">更      新</string>
    <string name="activity_im_audio_speak">按住说话</string>
    <string name="activity_im_audio_speak_cancel">上滑取消发送</string>
    <string name="activity_location_send">发送</string>
    <string name="activity_location_open">打开</string>
    <string name="menu_im_tribe_name_update">修改群名</string>
    <string name="menu_im_tribe_member_update">修改成员</string>
    <string name="title_activity_my_info">我的资料</string>
    <string name="title_activity_clip_avatar">编辑头像</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_save">保存</string>
    <string name="clip_avatar_save">保存</string>
    <string name="choose_picture">图片选择器</string>
    <string name="title_activity_account_security">账号与安全</string>
    <string name="title_activity_notice_setting">新消息通知</string>
    <string name="notice_setting_message_receive_help">手机新消息通知设置</string>
    <string name="title_notice_setting_message_receive_help">帮助-手机新消息通知设置</string>
    <string name="notice_setting_message_receive">接收新消息通知</string>
    <string name="choose_router">选择决策</string>
    <string name="dialog_opinion_label">填写意见</string>
    <string name="dialog_opinion_hint">请输入意见</string>
    <string name="calendar_update_type_single">只修改当前日程</string>
    <string name="calendar_update_type_after">修改当前日程和之后的此重复日程</string>
    <string name="calendar_update_type_all">修改所有此重复日程</string>
    <string name="biometric_dialog_cancel">取消</string>
    <string name="biometric_dialog_title">验证</string>
    <string name="biometric_dialog_subtitle">正在指纹识别中...</string>
    <string name="biometric_dialog_state_normal">指纹识别</string>
    <string name="biometric_dialog_use_password">其他方式</string>
    <string name="add_friend">添加好友</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="input_friend_username_hint">请输入您要查找的用户名</string>
    <string name="jmui_confirm">确定</string>
</resources>