<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.yunpan.activity.YunpanActivity">

    <item android:id="@+id/yunpan_menu_list"
        android:title="@string/yunpan_menu_list"
        android:orderInCategory="100"/>

    <group android:orderInCategory="200">
        <item android:id="@+id/yunpan_menu_action_upload_file"
            android:title="@string/yunpan_menu_upload_file"
            android:orderInCategory="100"/>

        <item android:id="@+id/yunpan_menu_create_folder"
            android:title="@string/yunpan_menu_create_folder"
            android:orderInCategory="200"/>
    </group>
    <group android:orderInCategory="300">
        <item android:id="@+id/yunpan_menu_order_by_createTime"
            android:title="@string/yunpan_menu_order_by_createTime"
            android:orderInCategory="300"/>

        <item android:id="@+id/yunpan_menu_choose"
            android:title="@string/yunpan_menu_choose"
            android:orderInCategory="400"/>
    </group>

</menu>
