<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_cloud_disk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/z_color_background"
    tools:context=".app.clouddrive.v2.CloudDiskActivity">
    <include layout="@layout/snippet_appbarlayout_toolbar" />

    <LinearLayout
        android:id="@+id/ll_disk_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_snippet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/tv_disk_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_image"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_image"/>
        <TextView
            android:id="@+id/tv_disk_document"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_document"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_doc"/>
        <TextView
            android:id="@+id/tv_disk_music"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_music"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_music"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_disk_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_disk_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/tv_disk_video"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_video"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_video"/>
        <TextView
            android:id="@+id/tv_disk_other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_application"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_other"/>
        <TextView
            android:id="@+id/tv_disk_share"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/z_color_text_primary"
            android:drawableTop="@mipmap/clouddisk_icon_share"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:text="@string/yunpan_category_share"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame_disk_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_disk_line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>