<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical|center_horizontal"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:background="@drawable/jmui_dialog_default_style"
              android:orientation="vertical">


    <View
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@drawable/jmui_dialog_top"/>

    <TextView
        android:id="@+id/jmui_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/jmui_resend_message_hint"
        android:textColor="#2C2C2C"
        android:textSize="16.67sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/jmui_cancel_btn"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/jmui_dialog_bottom_left_btn"
            android:text="@string/jmui_cancel"
            android:textColor="#2C2C2C"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/jmui_commit_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/jmui_dialog_bottom_right_btn"
            android:text="@string/jmui_resend_commit"
            android:textColor="#2C2C2C"
            android:textSize="18sp"
            />

    </LinearLayout>

</LinearLayout>
